# VAR-Officiating---AI-Agents-Debate-using-Crewai

./: README.md  pyproject.toml  report.md
output/: decide.md  oppose.md  propose.md
src/var_officiating/: crew.py  main.py
src/var_officiating/config/: agents.yaml  tasks.yaml
