[project]
name = "var_officiating"
version = "0.1.0"
description = "VAR_Officiating using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0"
]

[project.scripts]
var_officiating = "var_officiating.main:run"
run_crew = "var_officiating.main:run"
train = "var_officiating.main:train"
replay = "var_officiating.main:replay"
test = "var_officiating.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
